# elasticgraph

./: .gitignore  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  Gemfile  Steepfile  rbs_collection.lock.yaml
.github/workflows/: ci.yaml  publish-mcp-server.yaml  publish-site.yaml  release.yaml  update-gem-version-artifacts.yaml
ai_tools/: README.md
ai_tools/elasticgraph-mcp-server/: README.md  pyproject.toml
benchmarks/threading/: parallel_map_single_item.rb  parallel_map_single_item.results.txt
config/schema/: teams.rb  widgets.rb
config/schema/artifacts/: json_schemas.yaml  runtime_metadata.yaml  schema.graphql
config/schema/artifacts_with_apollo/: runtime_metadata.yaml  schema.graphql
config/site/src/: getting-started.md
config/site/src/guides/: ai-tools.md  (+1 more)
elasticgraph-graphql/: README.md  elasticgraph-graphql.gemspec
elasticgraph-graphql/lib/elastic_graph/: graphql.rb
elasticgraph-graphql/script/: dump_time_zones
elasticgraph-graphql/spec/acceptance/: hidden_types_spec.rb  search_spec.rb
elasticgraph-graphql/spec/support/: query_adapter.rb  resolver.rb
elasticgraph-indexer_autoscaler_lambda/: README.md  elasticgraph-indexer_autoscaler_lambda.gemspec
elasticgraph-indexer_lambda/: README.md  elasticgraph-indexer_lambda.gemspec
elasticgraph-query_registry/: README.md  elasticgraph-query_registry.gemspec
elasticgraph-schema_definition/: README.md  elasticgraph-schema_definition.gemspec
elasticgraph-support/lib/elastic_graph/: constants.rb
elasticgraph-support/sig/elastic_graph/: constants.rbs
elasticgraph-warehouse_lambda/: README.md  elasticgraph-warehouse_lambda.gemspec
elasticgraph/lib/elastic_graph/: cli.rb
script/: flatware_rspec  update_gem_constraints
spec_support/: spec_helper.rb
(+119 files in other folders)
